# singular

./: Cargo.toml  LICENSE  README.md  lib.rs
algorithms/: gaussian_elimination.rs
core/: blankets.rs  markers.rs  mod.rs  types.rs
